--- a/css/styles.css
+++ b/css/styles.css
@@ -31,23 +31,29 @@ pre {
     padding: 1em;
 }
 .fig{
-    background-color: #acd3f2;
-    display: block;
-    -webkit-margin-before: 1em;
+    /*background-color: #acd3f2;*/
+/*    display: block;*/
+/*    -webkit-margin-before: 1em;
     -webkit-margin-after: 1em;
     -webkit-margin-start: 40px;
-    -webkit-margin-end: 40px;
+    -webkit-margin-end: 40px;*/
+    
+}
+.figcaption{
+     text-align: center;
+     font-weight: bold;
 }
    .mis-slider li a {
             text-decoration: none;
             color: #666;
             display: block;
             background-color: #acd3f2;
-            height: 284px;
-            width: 100%;
-            border-radius: 171px;
+            max-width: 275px;
+            border-radius: 135px;
 
         }  
+
+}
 @media screen and (min-width: 1200px) {
     .main {
         width: 50%;
